--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,11 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
-            <groupId>springframework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>1.2.6</version>
+            <version>5.3.25</version>
         </dependency>
     </dependencies>
 </project>
