--- a/spring-aop/02-spring-aop-xml/pom.xml
+++ b/spring-aop/02-spring-aop-xml/pom.xml
@@ -3,22 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
+        <artifactId>spring-aop</artifactId>
         <groupId>ir.lazydeveloper</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-aop</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>01-spring-aop</module>
-        <module>02-spring-aop-xml</module>
-        <module>03-spring-aop-annotation</module>
-    </modules>
+    <artifactId>02-spring-aop-xml</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+    </dependencies>
 </project>
